--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>harrykxd</title>
     </head>
     <body>
-        <p>>harrykxd</p><br>
+        <h3>harrykxd</h3><br>
         <p><a href="https://gh.harrykxd.cf/phpgen">PHP Gen</a></p>
     </body>
 </html>
