--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h3>harrykxd</h3><br>
-        <p><a href="https://gh.harrykxd.cf/phpgen">PHP Gen</a></p>
+        <p><a href="https://www.harrykxd.cf/phpgen">PHP Gen</a></p>
     </body>
 </html>
